Correção de erro na path do arquivo e no formato de data

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@
 hs_err_pid*
 /JavaApplication1/nbproject/private/
 /LeituraBoletoStrategy/nbproject/private/
+/LeituraBoletoStrategy/build/
+/LeituraBoletoStrategy/dist/
